--- a/NEW_RESUME/main.tex
+++ b/NEW_RESUME/main.tex
@@ -110,7 +110,7 @@ urlcolor=black]{hyperref}
 
 \firstentry{
     \href{http://www.umd.edu}{\textbf{University of Maryland}}, College Park, Maryland, USA \hfill \datestamp{2019}{08}{07}--Present\newline
-    M.S. and Ph.D., \href{http://www.cs.umd.edu}{Department of Computer Science} \hfill 
+    M.S./ Ph.D., \href{http://www.cs.umd.edu}{Department of Computer Science} \hfill 
 }
 
 \entry{
@@ -170,7 +170,11 @@ Worked on a resource allocation problem that arises in scheduling parallel progr
 } 
 
     Worked on online bipartite matching problem with bounded degree on the offline vertices, specifically we design algorithms with degree-dependent competitive ratio. 
-
+    
+\section{Working \newline Projects}{projects}
+\firstentry{\textbf{Interpreting LLM via attention sparsity, University of Maryland}}
+   {{\newline \textit{ LLM interpretability } \hfill \textbf{Prof. John P. Dickerson, Prof. Aravind Srinivasan} \newline} }
+    Working on enhancing the interpretability of LLMs via sparse attention techniques. Specifically worked on using correlated sampling approaches to sample sparse attention patterns from attention matrix outperforming the existing sparse attention models like BigBird and LongFormer. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
@@ -189,25 +193,35 @@ Worked on a resource allocation problem that arises in scheduling parallel progr
 \section{\href{https://scholar.google.com/citations?user=l7VcIesAAAAJ&hl=en}{Publications}}{papers}
 
 
-
-
-\firstentry{{\textbf{{Robust Fair Clustering with Noisy Memberships}}}
-
-\textit{Under submission at ICML 2024}}
-
-\textit{Sharmila Duppala}, Seyed Esmaeili, Juan Luque, John Dickerson
-
-\entry{{\textbf{{Proportionally Fair Matching}}}
-
-\textit{Under submission at ICML 2024}}
-
-\textit{$^{abc}$Sharmila Duppala}, Nathaniel Grammel, Juan Luque, Aravind Srinivasan
-
-\entry{{\textbf{{Simultaneous Group and Individual Fairness in Set Covering Problems}}}
+\firstentry{{\textbf{{Simultaneous Group and Individual Fairness in Set Covering Problems}}}
 
 \textit{$^{abc}$Sharmila Duppala}, Nathaniel Grammel, Aravind Srinivasan
 
-\textit{Under submission at ICML 2024}}
+\textit{Under Submission}
+}
+
+\entry{{\textbf{{Robust Fair Clustering with Noisy Memberships}}}
+
+
+\textit{Sharmila Duppala}, Juan Luque, John P. Dickerson, Seyed Esmaeili
+
+\textit{AISTATS 2025}}
+
+
+
+\entry{{\textbf{{Randomized Rounding for Proportional Fair Matching}}}
+
+\textit{Sharmila Duppala}, Nathaniel Grammel, Juan Luque, Calum MacRury, Aravind Srinivasan
+
+\textit{AAAI 2025 (Oral presentation)}}
+
+
+\entry{{\textbf{{Concentration of Submodular Functions Under Negative Dependence}}}
+
+\textit{$^{abc}$Sharmila Duppala}, George Z. Li, Juan Luque, Renata Valieva, Aravind Srinivasan
+
+\textit{ITCS 2025}}
+
 
 % \entry{{\textbf{{Concentration of Submodular Functions Under Negative Dependence}}}
 
@@ -297,37 +311,36 @@ Seyed Esmaeili, \textit{Sharmila Duppala}, Brian Brubach, John P. Dickerson
 %% KEY COURSE PROJECTS %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Key \newline Projects}{projects}
 
 % \firstentry{\textbf{Comparing the efficacy of different data-preprocessing techniques in fair classification, University of Maryland}}
 %  \hfill {Prof. Soheil Feizi} 
 
 % {Compared the performance of recent data preprocessing techniques in fair classification (eg. Clustering) like data (reweighing techniques (RW), learning fairness representations (LFR), optimized pre-processing(OP) ) under the fairness metric "statistical parity" using open source toolkit AI Fairness 360 on standard data sets available. }
 
-\firstentry{\textbf{Operating Systems, Stony Brook University}}
- \hfill {Prof. Michael Ferdman} 
-{Built a  pre-emptive, multi-tasking {Operating System} from scratch. Implemented demand-paging, copy-on-fork and auto-growing stack functionalities. Created a compatible standard library and bash-like shell to interact with the kernal (OS).}
 
-\entry{\textbf{Computational Geometry, Stony Brook University}}
-\hfill{Prof. Joseph Mitchell}{}
+%     Worked on PAF (Probabilistically Approximately Fair) algorithms for combinatorial problems. Specifically designed and analyzed randomized algorithms to ensure fairness in various combinatorial problems like graph matching, set packing, set covering, and clustering problems with real-world applications. 
+% {Built a  pre-emptive, multi-tasking {Operating System} from scratch. Implemented demand-paging, copy-on-fork and auto-growing stack functionalities. Created a compatible standard library and bash-like shell to interact with the kernal (OS).}
 
-{ The alpha-fatness and chord-arc scores are different measures of the "niceness" of polygons. They may prove useful in developing quantitative measures by which electoral districts may be determined illegal. This project includes software for implementing these measures together with preliminary results on random polygons. }
+% \entry{\textbf{Computational Geometry, Stony Brook University}}
+% \hfill{Prof. Joseph Mitchell}{}
+
+% { The alpha-fatness and chord-arc scores are different measures of the "niceness" of polygons. They may prove useful in developing quantitative measures by which electoral districts may be determined illegal. This project includes software for implementing these measures together with preliminary results on random polygons. }
 
 
-\entry{}{\textbf{Energy Consumption Prediction, Stony Brook University}}
- \hfill {Prof. Zhenhua Liu} 
+% \entry{}{\textbf{Energy Consumption Prediction, Stony Brook University}}
+%  \hfill {Prof. Zhenhua Liu} 
  
-{Predicting an year's electricity consumption using the electricity consumption of previous year, time series data at 15min interval for 365 days. Implemented SARIMA, SVM and LSTM models using PyTorch and compared the results for 10 homes. Also enhanced the predictions using smart meter data for various appliances of the same homes.}
+% {Predicting an year's electricity consumption using the electricity consumption of previous year, time series data at 15min interval for 365 days. Implemented SARIMA, SVM and LSTM models using PyTorch and compared the results for 10 homes. Also enhanced the predictions using smart meter data for various appliances of the same homes.}
 
 
 \section{Key \newline Courses}{courses}
 \firstentry{
-    \textbf{Graduate Level:} Quantum Computing, Modern Discrete Probability, Mechanism Design for Social AI, Algorithmic Lowerbounds, Advanced Algorithms, Computational Geometry, Discrete Mathematics, Computer Vision, Operating Systems, Network Security.
+    \textbf{Graduate Level:} Quantum Computing, Discrete Probability, Mechanism Design, Multimodal Foundational Models, Advanced Algorithms, Computational Geometry, Discrete Mathematics, Computer Vision, Deep Learning Theory, Advanced Numerical Optimization, Algorithms in Machine Learning.
 }\\[-8pt]
 
-\entry{
-    \resizebox{\linewidth}{!}{\textbf{Data Science/ML:} Deep Learning Theory, Advanced Numerical Optimization, Algorithms in Machine Learning}
-}
+% \entry{
+%     \resizebox{\linewidth}{!}{\textbf{Data Science/ML:} }
+% }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% TECHNICAL SKILLS %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -336,7 +349,7 @@ Seyed Esmaeili, \textit{Sharmila Duppala}, Brian Brubach, John P. Dickerson
 \firstentry{
 \textbf{Program Committee Member-Reviewer; Sub-reviewer} 
 
-The WebConference 2024, ICLR 2023, SODA 2023, SODA 2019 
+The WebConference 2024, 2025, ICLR 2023, SODA 2023, SODA 2019 
 }
 
 % \entry{
@@ -363,9 +376,9 @@ The WebConference 2024, ICLR 2023, SODA 2023, SODA 2019
 \textbf{Programming Languages:} C, C++, Java, Python, SQL, PL-SQL, MATLAB, Prolog, Qiskit 
 }\\[-24pt]
 
-\entry{ 
-\textbf{Platforms/Tools:} Linux, Pandas, Windows, GDB, Eclipse, QEMU, Processing 
-} 
+% \entry{ 
+% \textbf{Platforms/Tools:} Linux, Pandas, Windows, GDB, Eclipse, QEMU, Processing 
+% } 
 \entry{   
 \textbf{Libraries for Machine Learning:} PyTorch, Numpy, TensorFlow, Jupyter Notebook, Hugging Face.
 }
@@ -378,11 +391,9 @@ The WebConference 2024, ICLR 2023, SODA 2023, SODA 2019
 \firstentry{
 Chair's Fellowship, University of Maryland, College Park}\\[-24pt]
 \entry{
-TCS (Theoretical Computer Science) Women Scholarship STOC-2018  }
+TCS (Theoretical Computer Science) Women Scholarship STOC-2018 and STOC 2019  }
 \entry{
 ACM Travel Scholarship SPAA-2019 }
-\entry{
-TCS (Theoretical Computer Science) Women Scholarship STOC-2019 }
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
